--- a/src/App.css
+++ b/src/App.css
@@ -27,15 +27,22 @@
 }
 
 .child {
-  background-color: #3498db;
-  color: white;
+  background-color: #007bff;
+  /* color: white; */
   max-height: 100%;
   overflow-y: auto;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   border-radius: 8px;
-  padding: 20px;
   height: 100%;
+
+  background-image: repeating-linear-gradient(
+    -45deg,
+    rgba(250, 250, 250, 0.5) 0px,
+    rgba(255, 255, 255, 0.5) 4px,
+    transparent 10px,
+    transparent 10px
+  );
 }
 
 .navbar {
@@ -97,7 +104,7 @@
   display: flex;
   position: absolute;
   width: 40%;
-  height: 300px;
+  height: auto;
   background: rgb(194, 199, 199);
   padding: 20px;
   border-radius: 10px;
@@ -267,7 +274,7 @@ h3 {
     font-size: small;
   }
   .navbar .logo {
-    font-size: medium;
+    font-size: large;
   }
   .show-hide {
     display: none;
